code errors fixed